--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,14 @@
+# This snippet installs python and jekyll dependencies
+# It then creates a book, and builds its html
 [build]
-  command = """\
-    gem install bundler -v '2.0.2'\
-    pip install -U git+https://github.com/jupyter/jupyter-book\
-    jupyter-book create mybook --content-folder content\
-    cd mybook\
-    jupyter-book build ./ --overwrite\
-    bundle exec jekyll build\
+  command = """
+    gem install bundler -v '2.0.2'
+    pip install -U git+https://github.com/jupyter/jupyter-book
+    jupyter-book create mybook --content-folder content
+    cd mybook
+    jupyter-book build ./ --overwrite
+    make install
+    bundle exec jekyll build
     """
+
+  publish = "mybook/_site"
